DOC - QM2019 update with DQ/Hugo's comments

--- a/Note/QM2019.md
+++ b/Note/QM2019.md
@@ -2,6 +2,6 @@
 
 Title: Production of $J/\psi$ mesons in jets at mid-rapidity in pp collisions at $\sqrt{s}$ = 13 TeV with ALICE
 
-The production of heavy quarkonia in hadron-hadron collisions occurs at the transition between the perturbative and nonperturbative regimes of QCD, resulting in a rich phenomenology that remains far from being fully understood. $J/\psi$ hadronization dynamics can be studied by measuring the $p_{T}$ fraction, $z \equiv p_{T,J/\psi} / p_{T,jet}$, carried by the $J/\psi$ meson detected inside a jet. The shape of the fragmentation pattern gives us an opportunity to reveal the dominant subprocesses during $J/\psi$ production. In addition, the production of non-prompt $J/\psi$, coming from b hadron decays, inside a jet should be sensitive to the fragmentation functions of quarks and gluons into b hadrons. The fragmentation of high pT jets containing a $J/\psi$ mesons was measured in pp collisions by LHCb and CMS Collaborations, respectively. The results surprisingly show non-prompt $J/\psi$ in jets are well described by models, but prompt $J/psi$ tend to be produced at much lower $z$ than the model predicted.
+The production of quarkonia in hadron-hadron collisions occurs at the transition between the perturbative and nonperturbative regimes of QCD, resulting in a rich phenomenology that remains far from being fully understood. $J/\psi$ hadronization dynamics can be studied by measuring the $p_{T}$ fraction, $z \equiv p_{T,J/\psi} / p_{T,jet}$, carried by the $J/\psi$ meson detected inside a jet. The distribution of this quantity, also called fragmentation function, gives us an opportunity to investigate the dominant subprocesses responsible for $J/\psi$ production. In addition, the production of non-prompt $J/\psi$, coming from b hadron decays, inside a jet should be sensitive to the fragmentation functions of quarks and gluons into b hadrons. The fragmentation of high pT jets containing a $J/\psi$ mesons was measured in pp collisions by LHCb and CMS Collaborations, respectively. The results surprisingly show that non-prompt $J/\psi$ in jets are well described by models, but that prompt $J/\psi$ tend to be produced at much lower $z$ than the model predicted.
 
-In this contribution, we report the measurements of the fragmentation of jets into $J/\psi$ in pp collision at $\sqrt{s} = 13~TeV$ using the data taking by ALICE，with the $J/\psi$ constructed by the electron-positron invariant mass pairs at mid-rapidity in central barrel detectors. The result will be compared to simulations and theoretical models. And both prompt and non-prompt components will be presented.
+In this contribution, we report the measurements of the fragmentation of jets into $J/\psi$ in pp collision at $\sqrt{s}$ = 13 TeV using the data collected by ALICE，with the $J/\psi$ being measured at mid-rapidity in the di-electron decay channel by the central barrel detectors. Results for both prompt and non-prompt components will be presented. They will be compared to simulations and theoretical model calculations.
